syntax = "proto3";
package samricotta.vote.crs.v1;

option go_package = "github.com/samricotta/vote/x/crs";

import "google/api/annotations.proto";
import "cosmos/query/v1/query.proto";
import "amino/amino.proto";
import "gogoproto/gogo.proto";

// Msg defines the module Msg service.
service Query {
	rpc NewDecision(QueryNewDecisionsRequest) returns (QueryNewDecisionsResponse) {
		option (cosmos.query.v1.module_query_safe) = true;
    	option (google.api.http).get = "/samricotta/vote/crs/v1/new_decision";
	}
}

message QueryNewDecisionsRequest {}
message QueryNewDecisionsResponse {}

